[package]
edition = "2021"
name    = "esp32c6-hdc3022"
version = "0.1.0"

[[bin]]
name = "esp32c6-hdc3022"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
esp-hal          = { version = "1.0.0-beta.0", features = ["esp32c6", "unstable"] }
embassy-executor = "0.7.0"
embassy-time        = "0.4.0"
embedded-hal-async = "1.0.0"
esp-hal-embassy = { version = "0.7.0", features = [ "esp32c6" ] }
fugit = "0.3.7"
hdc302x-async = "0.2.0"
esp-println = { version = "0.11.0", features = ["esp32c6"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
